[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/turret_blueprint.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13.8087 )

[node name="turret_blueprint" type="Node2D" groups=[
"b",
]]
z_index = 100
script = ExtResource( 1 )

[node name="Polygon2D6" type="Polygon2D" parent="."]
position = Vector2( 0.041214, 0.0234871 )
color = Color( 1, 0, 0, 0.0352941 )
polygon = PoolVector2Array( -288, 40, -288, -40, -40, -288, 40, -288, 288, -40, 288, 40, 40, 296, -40, 296 )

[node name="Polygon2D5" type="Polygon2D" parent="."]
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( -9.64556, -11.9617, -7.99191, -11.9617, -7.99189, -13.9304, -1.96789, -13.9697, -2.04664, -23.8916, 1.92999, -23.931, 2.04811, -14.0879, 7.99336, -13.9697, 8.07211, -12.0011, 9.72576, -11.9617, 10.0801, 11.9768, 8.0721, 11.9768, 8.0721, 14.0241, -5.98389, 14.0635, -6.02326, 12.0949, -9.92114, 11.9768 )
__meta__ = {
"_editor_description_": ""
}

[node name="Polygon2D" type="Polygon2D" parent="."]
rotation = 3.14159
scale = Vector2( 0.81212, 0.814058 )
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( 1.65918, -6.73406, 24.2052, -26.6413, 29.0836, -29.2716, 26.1921, -25.0039, 3.99155, -4.14873 )
__meta__ = {
"_editor_description_": ""
}

[node name="Polygon2D2" type="Polygon2D" parent="."]
rotation = 4.71239
scale = Vector2( 0.81212, 0.814058 )
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( 1.65918, -6.73406, 24.2052, -26.6413, 29.0836, -29.2716, 26.1921, -25.0039, 3.99155, -4.14873 )
__meta__ = {
"_editor_description_": ""
}

[node name="Polygon2D3" type="Polygon2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.81212, 0.814058 )
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( 1.65918, -6.73406, 24.2052, -26.6413, 29.0836, -29.2716, 26.1921, -25.0039, 3.99155, -4.14873 )
__meta__ = {
"_editor_description_": ""
}

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2( 0.08815, 0.298294 )
scale = Vector2( 0.81212, 0.814058 )
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( 1.65918, -6.73406, 24.2052, -26.6413, 29.0836, -29.2716, 26.1921, -25.0039, 3.99155, -4.14873 )
__meta__ = {
"_editor_description_": ""
}

[node name="without_tur" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="without_tur"]
shape = SubResource( 1 )
[connection signal="area_entered" from="without_tur" to="." method="_on_without_tur_area_entered"]
[connection signal="area_exited" from="without_tur" to="." method="_on_without_tur_area_exited"]
